# strands-agentcore-demo

./: .gitignore  Dockerfile  README.md  my_agent.py  my_agent_with_gateway.py  pyproject.toml
.bedrock_agentcore/my_agent/: Dockerfile.old  dependencies.hash
